[package]
name = "dns-update"
description = "Dynamic DNS update (RFC 2136 and cloud) library for Rust"
version = "0.1.2"
edition = "2021"
authors = [ "Stalwart Labs <hello@stalw.art>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stalwartlabs/dns-update"
homepage = "https://github.com/stalwartlabs/dns-update"
keywords = ["dns", "update", "rfc2136", "dynamic"]
categories = ["network-programming"]
readme = "README.md"
resolver = "2"

[dependencies]
tokio = { version = "1", features = ["rt", "net"] }
hickory-client = { git = "https://github.com/hickory-dns/hickory-dns.git", rev = "c141df9468b4039976ff1fcb298b6e9c84798520", version = "0.25.0", features = ["tls-aws-lc-rs", "dnssec-aws-lc-rs", "https-aws-lc-rs"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "http2"]}
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
